--- a/materials/cs2_practical_anova.qmd
+++ b/materials/cs2_practical_anova.qmd
@@ -77,19 +77,19 @@ ggResidpanel::resid_panel()
 #| eval: false
 #| warning: false
 # Fits a linear model  
-lm()
+stats::lm()
 
 # Carries out an ANOVA on a linear model 
-anova()
+stats::anova()
 
 # Plots a Q-Q plot for comparison with a normal distribution
-qqnorm()
+stats::qqnorm()
 
 # Adds a comparison line to the Q-Q plot
-qqline()
+stats::qqline()
 
 # Performs a Shapiro-Wilk test for normality
-shapiro.test()
+stats::shapiro.test()
 ```
 
 ## Python
