--- a/materials/cs2_practical_anova.qmd
+++ b/materials/cs2_practical_anova.qmd
@@ -1025,7 +1025,7 @@ Let's look at the Shapiro-Wilk test for all of the data together:
 
 ```{python}
 # create a linear model
-lm_lobsters_py = smf.ols(formula= "weight ~ C(diet)", data = lobsters_py)
+model = smf.ols(formula= "weight ~ C(diet)", data = lobsters_py)
 # and get the fitted parameters of the model
 lm_lobsters_py = model.fit()
 ```
